--- a/index.html
+++ b/index.html
@@ -3,13 +3,135 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>HTML Semantic Sample Output</title>
+    <title>All About Me</title>
 </head>
 <body>
-    <h1>Welcome to my Website</h1>
-    <h2>Created by: Ian Joyd Franco</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id itaque animi corrupti magni ad doloremque debitis, aliquid neque repudiandae necessitatibus, provident quod quam labore hic laborum ut dolorem incidunt nobis.</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, odio architecto autem, distinctio temporibus magnam numquam perferendis, corrupti officiis voluptate molestias. Reiciendis, sed! Labore nobis dignissimos iure, omnis sunt commodi?</p>
-    <h2>Hi!!</h2>
+    <header>
+        <h1>All About Me</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#about">About Myself</a></li>
+                <li><a href="#life">My Lifestory</a></li>
+                <li><a href="#hobbies">Hobbies</a></li>
+                <li><a href="#fave">Favorites</a></li>
+                <li><a href="#friends">Friends</a></li>
+            </ul>
+        </nav>
+    </header>
+    <hr>
+    <main>
+        <article id="about">
+            <section>
+                <h2>About Myself</h2>
+                <figure>
+                    <img src="ianjoyd.jpg" alt="myprofile" height="300">
+                    <figcaption>
+                        <ul>
+                            <li>Name: Ian Joyd P. Franco</li>
+                            <li>Age: 24</li>
+                            <li>Address: Aclan, Nasipit, Agusan del Norte</li>
+                            <li>Birthday: December 16, 1999</li>
+                        </ul>
+                    </figcaption>
+                    <p>Hi there! I'm Ian, a passionate individual with a love for programming. I thrive on making html sample output, always seeking new challenges to broaden my horizons. With a creative mindset and a knack for web developing, I bring a unique perspective to every endeavor. When not immersed in playing online games, you can find me SMCC EDP office. Let's connect and explore the exciting possibilities ahead!</p>
+                </figure>
+            </section>
+        </article>
+        <hr>
+        <article id="life">
+            <h2>My Lifestory</h2>
+            <Section>
+                <h3>Childhood</h3>
+                <figure>
+                    <img src="child.jpg" alt="babypic" height="300"></img>
+                    <figcaption>When I am Only 3 Years Old</figcaption>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate eos voluptate autem quibusdam, enim quaerat quis necessitatibus, quae rem neque quasi! Non amet cumque a ad, reiciendis in incidunt modi!</p>
+                </figure>
+            </Section>
+            <section>
+                <h3>Teenage</h3>
+                <figure>
+                    <img src="teen.jpg" alt="teenage" height="300">
+                    <figcaption>18 Years Old</figcaption>
+                <p>The Toughest level of my life when I'm at my lowest choosing between to pursue my degree or to work to help the family</p>
+                </figure>
+            </section>
+            <section>
+                <h3>Adult</h3> 
+                <figure>
+                    <img src="adulting.jpg" alt="adult" height="300">
+                    <figcaption>And finally decided to finish my degree</figcaption>
+                    <p>Driven and aspiring Com Sci student. Passionate and Eager to contribute and grow, seeking academic challenges to broaden my knowledge and make a meaningful impact.</p>
+                </figure>
+            </section>
+        </article>
+        <hr>
+        <article id="hobbies">
+            <h2>Hobbies</h2>
+            <section>
+                <h3>Outside Hobby</h3>
+                <figure>
+                    <img src="outside.jpg" alt="outside hobby" height="300">
+                    <figcaption>Surveying and Mountain Climbing</figcaption>
+                    <p>Adventurous surveyor and mountain enthusiast. Scaling heights and mapping terrains are my passions. Thriving on challenges, I blend precision from surveying with the thrill of mountain climbing for a unique perspective on life's landscapes.</p>
+                </figure>
+            </section>
+            <section>
+                <figure>
+                    <img src="inside.jpg" alt="Dota 2" height="300">
+                    <figcaption>Playing Online Games</figcaption>
+                    <p>I play a lot of online games during my free time like Genshin Impact, Mobile Legends, Dota 2 and many more</p>
+                </figure>
+            </section>
+        </article>
+        <hr>
+        <article id="fave">
+            <h2>Favorites</h2>
+            <section>
+                <h3>Color</h3>
+                <figure>
+                    <img src="royal.png" alt="favColor" height="300">
+                    <figcaption>Any Shades of Blue</figcaption>
+                    <p>I am an individual captivated by the serene allure of blue. From sky to ocean hues, I find tranquility in shades of blue, reflecting my calm and contemplative nature.</p>
+                </figure>
+            </section>
+            <section>
+                <h3>Food</h3>
+                <figure>
+                    <img src="sisig.webp" alt="sisig" height="300">
+                    <figcaption>My Greatest Food Addiction is Pork Sisig</figcaption>
+                    <p>Savoring the spicy, savory perfection, I'm on a perpetual quest for the ultimate rendition of this delectable dish.</p>
+                </figure>
+            </section>
+        </article>
+        <hr>
+        <article id="friend">
+            <h2>Friends</h2>
+            <section>
+                <h3>High School</h3>
+                <figure>
+                    <img src="hs.jpg" alt="high schoool" height="300">
+                    <figcaption>Team Pakurat</figcaption>
+                    <ul>
+                        <li>Ian Joyd Franco</li>
+                        <li>Anne Crister Sedaya</li>
+                        <li>Vanessa Alibangbang</li>
+                        <li>Kenneth Tuleles</li>
+                        <li>Lovely Edilo</li>
+                        <li>Loue Luces</li>
+                    </ul>
+                    <p>"We are creating waves of laughter while enjoying a refreshing pool day. Splashes of joy, shared moments, and the sun's warmth make it a perfect gathering for endless summer memories."</p>
+                </figure>
+            </section>
+            <section>
+                <h3>College</h3>
+                <figure>
+                    <img src="col.jpg" alt="" height="300">
+                    <figcaption></figcaption>
+                </figure>
+            </section>
+        </article>
+    </main>
 </body>
 </html>
