--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <img src="hs.jpg" alt="high schoool" height="300">
                     <figcaption>Team Pakurat</figcaption>
                     <ul>
-                        <li>Ian Joyd Franco</li>
+                        <li>ME</li>
                         <li>Anne Crister Sedaya</li>
                         <li>Vanessa Alibangbang</li>
                         <li>Kenneth Tuleles</li>
@@ -128,8 +128,18 @@
                 <h3>College</h3>
                 <figure>
                     <img src="col.jpg" alt="" height="300">
-                    <figcaption></figcaption>
+                    <figcaption>Thank Your Sir</figcaption>
+                    <ul>
+                        <li>Marlon Juhn Timogan</li>
+                        <li>Jennifer Rosales</li>
+                        <li>Kyhia Erojo</li>
+                        <li>Kevinker Bernaldez</li>
+                        <li>ME</li>
+                        <li>Jake Castillon</li>
+                    </ul>
+                    <p>In the cozy glow of shared laughter and delectable aromas, relishes a delightful dinner together. Bonded by friendship and good food, each bite becomes a moment to cherish.</p>
                 </figure>
+
             </section>
         </article>
     </main>
