--- a/index.html
+++ b/index.html
@@ -143,5 +143,10 @@
             </section>
         </article>
     </main>
+    <hr>
+    <footer style="text-align: center;">
+        <p>All Rights Reserved &copy; Ian Joyd Franco</p>
+        <a href="#top">Back to Top</a>
+    </footer>
 </body>
 </html>
