--- a/index.html
+++ b/index.html
@@ -139,7 +139,51 @@
                     </ul>
                     <p>In the cozy glow of shared laughter and delectable aromas, relishes a delightful dinner together. Bonded by friendship and good food, each bite becomes a moment to cherish.</p>
                 </figure>
-
+            </section>
+            <section>
+                <h3>Close Friends</h3>
+                <figure>
+                    <img src="onefam.jpg" alt="ONEFAM" height="300">
+                    <img src="one.jpg" alt="ONEFAM" height="300">
+                    <figcaption>ONE FAM</figcaption>
+                    <br>
+                    <TABLE>
+                        <td>
+                            <ul>
+                                <li>Graciano Lopez Zaila</li>
+                                <li>Stephanie Ann "Yaga" Alvarez</li>
+                                <li>Hanzdave Ariana Grande</li>
+                                <li>Alliah Katryn Bernardo</li>
+                                <li>Shik Sheila Bed and Roses</li>
+                                <li>Maria Allysa Macapagal Arroyo</li>
+                                <li>Jeniffer Lopez</li>
+                                <li>John Carlo "Shesh" Bonotan</li>
+                            </ul>
+                        </td>
+                       
+                        <td>
+                            <ul>
+                                <li>Nash Arellano</li>
+                                <li>Kenn Gluthatione User</li>
+                                <li>Varren Shabu Shabu</li>
+                                <li>Carly Rae Jepsen</li>
+                                <li>Kevin Photoshoppe</li>
+                                <li>Mico Delikado</li>
+                                <li>Dong Jake Buriqat</li>
+                                <li>Ako pinakaGwapo</li>
+                            </ul>
+                        </td>
+                    </TABLE>
+                    <P>In the relentless pursuit of knowledge and success, we as a resilient group of friends stands united, navigating the challenges of academia together. Through shared goals and mutual support, we inspire each other to triumph on the path towards earning our degrees.</P>
+                </figure>
+            </section>
+            <section>
+                <h3>Best Friend</h3>
+                <figure>
+                    <img src="myone.jpg" alt="myone"    height="300">
+                    <figcaption>My One and Only</figcaption>
+                    <p>Captivated by her charm, I find myself deeply in love with this incredible girl. Every moment with her is a symphony of joy, and her presence adds a special kind of magic to my world.</p>
+                </figure>
             </section>
         </article>
     </main>
