--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>All About Me</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -46,7 +47,7 @@
                 <figure>
                     <img src="child.jpg" alt="babypic" height="300"></img>
                     <figcaption>When I am Only 3 Years Old</figcaption>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate eos voluptate autem quibusdam, enim quaerat quis necessitatibus, quae rem neque quasi! Non amet cumque a ad, reiciendis in incidunt modi!</p>
+                <p class="gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate eos voluptate autem quibusdam, enim quaerat quis necessitatibus, quae rem neque quasi! Non amet cumque a ad, reiciendis in incidunt modi!</p>
                 </figure>
             </Section>
             <section>
@@ -54,7 +55,7 @@
                 <figure>
                     <img src="teen.jpg" alt="teenage" height="300">
                     <figcaption>18 Years Old</figcaption>
-                <p>The Toughest level of my life when I'm at my lowest choosing between to pursue my degree or to work to help the family</p>
+                <p>The <span>Toughest</span> level of my life when I'm at my lowest choosing between to pursue my degree or to work to help the family</p>
                 </figure>
             </section>
             <section>
