--- a/index.html
+++ b/index.html
@@ -183,13 +183,13 @@
                 <figure>
                     <img src="myone.jpg" alt="myone"    height="300">
                     <figcaption>My One and Only</figcaption>
-                    <p>Captivated by her charm, I find myself deeply in love with this incredible girl. Every moment with her is a symphony of joy, and her presence adds a special kind of magic to my world.</p>
+                    <p>Captivated by her charm, I find myself deeply in love with this incredible girl. Every moment with her is a symphony of joy, and her presence adds a special kind of magic to my world.</p><br><br>
                 </figure>
             </section>
         </article>
     </main>
     <hr>
-    <footer style="text-align: center;">
+    <footer id="" style="text-align: center;">
         <p>All Rights Reserved &copy; Ian Joyd Franco</p>
         <a href="#top">Back to Top</a>
     </footer>
