--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <section>
                 <h2>About Myself</h2>
                 <figure>
-                    <img src="ianjoyd.jpg" alt="myprofile" height="300">
+                    <img src="ianjoyd.jpg" alt="myprofile" height="300" id="img1">
                     <figcaption>
                         <ul>
                             <li>Name: Ian Joyd P. Franco</li>
@@ -45,7 +45,7 @@
             <Section>
                 <h3>Childhood</h3>
                 <figure>
-                    <img src="child.jpg" alt="babypic" height="300"></img>
+                    <img src="child.jpg" alt="babypic" height="300" id="img1"></img>
                     <figcaption>When I am Only 3 Years Old</figcaption>
                 <p class="gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate eos voluptate autem quibusdam, enim quaerat quis necessitatibus, quae rem neque quasi! Non amet cumque a ad, reiciendis in incidunt modi!</p>
                 </figure>
@@ -53,7 +53,7 @@
             <section>
                 <h3>Teenage</h3>
                 <figure>
-                    <img src="teen.jpg" alt="teenage" height="300">
+                    <img src="teen.jpg" alt="teenage" height="300" id="img1">
                     <figcaption>18 Years Old</figcaption>
                 <p>The <span>Toughest</span> level of my life when I'm at my lowest choosing between to pursue my degree or to work to help the family</p>
                 </figure>
@@ -61,7 +61,7 @@
             <section>
                 <h3>Adult</h3> 
                 <figure>
-                    <img src="adulting.jpg" alt="adult" height="300">
+                    <img src="adulting.jpg" alt="adult" height="300" id="img1">
                     <figcaption>And finally decided to finish my degree</figcaption>
                     <p>Driven and aspiring Com Sci student. Passionate and Eager to contribute and grow, seeking academic challenges to broaden my knowledge and make a meaningful impact.</p>
                 </figure>
@@ -73,14 +73,14 @@
             <section>
                 <h3>Outside Hobby</h3>
                 <figure>
-                    <img src="outside.jpg" alt="outside hobby" height="300">
+                    <img src="outside.jpg" alt="outside hobby" height="300" id="img1">
                     <figcaption>Surveying and Mountain Climbing</figcaption>
                     <p>Adventurous surveyor and mountain enthusiast. Scaling heights and mapping terrains are my passions. Thriving on challenges, I blend precision from surveying with the thrill of mountain climbing for a unique perspective on life's landscapes.</p>
                 </figure>
             </section>
             <section>
                 <figure>
-                    <img src="inside.jpg" alt="Dota 2" height="300">
+                    <img src="inside.jpg" alt="Dota 2" height="300" id="img1">
                     <figcaption>Playing Online Games</figcaption>
                     <p>I play a lot of online games during my free time like Genshin Impact, Mobile Legends, Dota 2 and many more</p>
                 </figure>
@@ -92,7 +92,7 @@
             <section>
                 <h3>Color</h3>
                 <figure>
-                    <img src="royal.png" alt="favColor" height="300">
+                    <img src="royal.png" alt="favColor" height="300" id="img1">
                     <figcaption>Any Shades of Blue</figcaption>
                     <p>I am an individual captivated by the serene allure of blue. From sky to ocean hues, I find tranquility in shades of blue, reflecting my calm and contemplative nature.</p>
                 </figure>
@@ -100,7 +100,7 @@
             <section>
                 <h3>Food</h3>
                 <figure>
-                    <img src="sisig.webp" alt="sisig" height="300">
+                    <img src="sisig.webp" alt="sisig" height="300" id="img1">
                     <figcaption>My Greatest Food Addiction is Pork Sisig</figcaption>
                     <p>Savoring the spicy, savory perfection, I'm on a perpetual quest for the ultimate rendition of this delectable dish.</p>
                 </figure>
@@ -112,7 +112,7 @@
             <section>
                 <h3>High School</h3>
                 <figure>
-                    <img src="hs.jpg" alt="high schoool" height="300">
+                    <img src="hs.jpg" alt="high schoool" height="300" id="img1">
                     <figcaption>Team Pakurat</figcaption>
                     <ul>
                         <li>ME</li>
@@ -128,8 +128,8 @@
             <section>
                 <h3>College</h3>
                 <figure>
-                    <img src="col.jpg" alt="" height="300">
-                    <figcaption>Thank Your Sir</figcaption>
+                    <img src="col.jpg" alt="" height="300" id="img1">
+                    <figcaption>Thank You Sir</figcaption>
                     <ul>
                         <li>Marlon Juhn Timogan</li>
                         <li>Jennifer Rosales</li>
@@ -144,8 +144,8 @@
             <section>
                 <h3>Close Friends</h3>
                 <figure>
-                    <img src="onefam.jpg" alt="ONEFAM" height="300">
-                    <img src="one.jpg" alt="ONEFAM" height="300">
+                    <img src="onefam.jpg" alt="ONEFAM" height="300" id="img1">
+                    <img src="one.jpg" alt="ONEFAM" height="300" id="img1">
                     <figcaption>ONE FAM</figcaption>
                     <br>
                     <TABLE>
@@ -181,7 +181,7 @@
             <section>
                 <h3>Best Friend</h3>
                 <figure>
-                    <img src="myone.jpg" alt="myone"    height="300">
+                    <img src="myone.jpg" alt="myone"    height="300" id="img1">
                     <figcaption>My One and Only</figcaption>
                     <p>Captivated by her charm, I find myself deeply in love with this incredible girl. Every moment with her is a symphony of joy, and her presence adds a special kind of magic to my world.</p><br><br>
                 </figure>
