--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     </main>
     <hr>
     <footer id="" style="text-align: center;">
-        <p>All Rights Reserved &copy; Ian Joyd Franco</p>
+        <p id="footer-design">All Rights Reserved &copy; Ian Joyd Franco</p>
         <a href="#top">Back to Top</a>
     </footer>
 </body>
